💄 fix align menu items

--- a/flex-projeto/style.css
+++ b/flex-projeto/style.css
@@ -34,6 +34,7 @@ header .list-items{
   max-width: 260px;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
 }
 
 .list-items li a{
